# edumms

./: .gitignore
lab1/src/: .gitignore  CMakeLists.txt  Cargo.toml  config.toml  devenv.nix  devenv.yaml  output.csv
lab1/src/project/src/: main.cpp
lab1/src/solvers/: CMakeLists.txt
lab1/src/solvers/include/: ffi.h  interval.h  solver.h
lab1/src/solvers/src/: adams_bashforth.cpp  euler.cpp  runge_kutta.cpp
lab1/src/src/: config.rs  ffi.rs  interval.rs  lib.rs  main.rs  plot.rs  solution.rs  solver.rs  task.rs
