[package]
name = "project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.89"
libloading = "0.8.5"
plotters = "0.3.7"
toml = { version = "0.8.19", features = ["parse"] }
serde = { version = "1.0.210", features = ["derive"] }
